@@ -1426,13 +1426,17 @@ void Util::PlotNLL(RooWorkspace* w, RooFitResult* rFit, Bool_t plotPLL, TString 
         }
 
         RooPlot* frame = par->frame();
-        nll->plotOn(frame, ShiftToZero());
+        nll->plotOn(frame, ShiftToZero() );
         frame->SetMinimum(0.);
         // To be able to see the 1/2 sigma
         frame->SetMaximum(2.5);
 
         const char* curvename = 0;
         RooCurve* curve = (RooCurve*) frame->findObject(curvename,RooCurve::Class()) ;
+
+        TGraph* nllCurve = static_cast<TGraph*>(curve->Clone());
+        nllCurve->SetName(TString("nll_")+parName);
+
         Double_t curveMax = curve->getYAxisMax();
         // safety for weird RooPlots where curve goes to infinity in first/last bin(s)
         if (curveMax > 0. && !std::isinf(curveMax) && !std::isnan(curveMax) )  { ; } // frame->SetMaximum(curveMax * 2.); 
@@ -1480,8 +1484,8 @@ void Util::PlotNLL(RooWorkspace* w, RooFitResult* rFit, Bool_t plotPLL, TString 
         double xmax = frame->GetXaxis()->GetBinUpEdge(lastbin) ;
         double xmin = frame->GetXaxis()->GetBinLowEdge(firstbin) ;
 
-        TLine* l1 = new TLine(xmin,2.,xmax,2.);
-        TLine* l2 = new TLine(xmin,0.5,xmax,0.5);
+        TLine* l1 = new TLine(xmin, 2., xmax, 2.);
+        TLine* l2 = new TLine(xmin, 0.5, xmax, 0.5);
 
         l1->SetLineStyle(3);
         l2->SetLineStyle(3);
@@ -1490,25 +1494,31 @@ void Util::PlotNLL(RooWorkspace* w, RooFitResult* rFit, Bool_t plotPLL, TString 
         frame->addObject(l2);
 
         RooAbsReal* pll(0);
+        TGraph *pllCurve = 0;
         if(plotPLL) { 
             pll = nll->createProfile(*par) ;
-            pll->plotOn(frame,LineColor(kRed),LineStyle(kDashed),NumCPU(4)); 
+            pll->plotOn(frame, LineColor(kRed), LineStyle(kDashed), NumCPU(4));
+            const char* curvename = 0;
+            RooCurve* curve = (RooCurve*) frame->findObject(curvename,RooCurve::Class()) ;
+
+            pllCurve = static_cast<TGraph*>(curve->Clone());
+            pllCurve->SetName(TString("nll_")+parName);
         }
 
 
-        TString canName=Form("can_NLL_%s_%s_%s",outputPrefix.Data(),rFit->GetName(),parName.Data());
-        canVec[iPar] = new TCanvas(canName,canName,600,600); 
+        TString canName=Form("can_NLL_%s_%s_%s", outputPrefix.Data(), rFit->GetName(), parName.Data());
+        canVec[iPar] = new TCanvas(canName, canName, 600, 600); 
         canVec[iPar]->cd();
         frame->Draw();  
 
-        TLegend* leg = new TLegend(0.55,0.65,0.85,0.9,"");
+        TLegend* leg = new TLegend(0.55, 0.65, 0.85, 0.9, "");
         leg->SetFillStyle(0);
         leg->SetFillColor(0);
         leg->SetBorderSize(0);
-        TLegendEntry* entry=leg->AddEntry("","NLL","l") ;
+        TLegendEntry* entry=leg->AddEntry("", "NLL", "l") ;
         entry->SetLineColor(kBlue);
         if(plotPLL) {	
-            entry=leg->AddEntry("","PLL","l") ;
+            entry=leg->AddEntry("", "PLL", "l") ;
             entry->SetLineColor(kRed);
             entry->SetLineStyle(kDashed);
         }
@@ -1526,7 +1536,14 @@ void Util::PlotNLL(RooWorkspace* w, RooFitResult* rFit, Bool_t plotPLL, TString 
         }
 
         canVec[iPar]->SaveAs("results/"+anaName+"/"+canName+".pdf");
+        canVec[iPar]->SaveAs("results/"+anaName+"/"+canName+".C");
         canVec[iPar]->SaveAs("results/"+anaName+"/"+canName+".eps");
+
+        TString fname("results/"+anaName+"/"+canName+".root");
+        TFile *f = TFile::Open(fname, "RECREATE");
+        nllCurve->Write();
+        if(pllCurve) { pllCurve->Write(); }
+        f->Close();
         //  }
 
     }
