@@ -1,9 +1,12 @@
+2016-05-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* src/Utils.cxx: write out nll curve in ROOT file, not just plots 
+
 2016-05-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* scripts/HistFitter.py: allow 'all' as shorthand for 'allPlots'. Fix
 	multiline fatal message.
 
 2016-05-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
-	* src/Utils: use C++ casts in fit method. Check that our data actually
+	* src/Utils.cxx: use C++ casts in fit method. Check that our data actually
 	exists; throw fatal in case data is absent. (Points to a misuse of blinded
 	fits typically.)
 
